--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,20 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
+    "@reduxjs/toolkit": "^2.5.0",
+    "@tanstack/react-query": "^5.64.2",
     "@toolpad/core": "^0.12.0",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "dayjs": "^1.11.13",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
@@ -41,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.64.2",
     "tailwindcss": "^3.4.17"
   }
 }
