--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "cra-template": "1.2.0",
     "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
