--- a/client/package.json
+++ b/client/package.json
@@ -11,18 +11,23 @@
     "@tanstack/react-query": "^5.64.2",
     "@toolpad/core": "^0.12.0",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
     "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
+    "react-range": "^1.10.0",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.1",
     "redux": "^5.0.1",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "zustand": "^5.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
