--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   },
   "devDependencies": {
     "eslint": "^7.23.0",
